Fixade en bugg Edge app länkar, La till Google Fonts, Fixade Dark mode element som hade fel färg

--- a/src/scss/base/_core.scss
+++ b/src/scss/base/_core.scss
@@ -6,6 +6,12 @@ html {
   font-size: t.$core-font-size;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 /// Theme Settings
 :root {
   --logo-image: url("@assets/images/svg/logo.svg");
