--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -213,8 +213,7 @@
     0,
     map-get($map: a.$breakpoints, $key: "medium")
   ) {
-    width: 22.9em;
-    height: 3.150625em;
+    width: 9cqh;
     justify-content: center;
     align-items: center;
     text-align: center;
